  arguments are used to find the record and which are used to create it:

    User.where(:first_name => "Scarlett").first_or_create!(:last_name => "Johansson")

  [Andrés Mejía]

* Fix nested attributes bug where _destroy parameter is taken into account
  during :reject_if => :all_blank (fixes #2937)

  [Aaron Christy]

*Rails 3.1.2 (unreleased)*

* If a record is removed from a has_many :through, all of the join records relating to that
  record should also be removed from the through association's target.

  [Jon Leighton]

* Fix adding multiple instances of the same record to a has_many :through. [GH #3425]

  [Jon Leighton]

* Fix creating records in a through association with a polymorphic source type. [GH #3247]

  [Jon Leighton]

*Rails 3.1.1 (October 7, 2011)*

* Add deprecation for the preload_associations method. Fixes #3022.

  [Jon Leighton]

* Don't require a DB connection when loading a model that uses set_primary_key. GH #2807.

  [Jon Leighton]

* Fix using select() with a habtm association, e.g. Person.friends.select(:name). GH #3030 and
  #2923.

  [Hendy Tanata]

* Fix belongs_to polymorphic with custom primary key on target. GH #3104.

  [Jon Leighton]

* CollectionProxy#replace should change the DB records rather than just mutating the array.
  Fixes #3020.

  [Jon Leighton]

* LRU cache in mysql and sqlite are now per-process caches.

	* lib/active_record/connection_adapters/mysql_adapter.rb: LRU cache
	  keys are per process id.
	* lib/active_record/connection_adapters/sqlite_adapter.rb: ditto

  [Aaron Patterson]

* Support bulk change_table in mysql2 adapter, as well as the mysql one. [Jon Leighton]

* If multiple parameters are sent representing a date, and some are blank, the
resulting object is nil. In previous releases those values defaulted to 1. This
only affects existing but blank parameters, missing ones still raise an error.
[Akira Matsuda]

* ActiveRecord::Base.establish_connection now takes a string that contains